--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "docz": "^0.10.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    
-    
+    "emotion": "^9.2.8",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.1.0",
@@ -28,8 +27,6 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-
-
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -37,6 +34,7 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "memoize-one": "^4.0.0",
+    "node-sass": "^4.9.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -49,6 +47,7 @@
     "react-window": "^1.1.2",
     "recompose": "^0.28.2",
     "resolve": "1.6.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
