--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
+    "react-draggable": "^3.0.5",
     "react-window": "^1.1.2",
     "recompose": "^0.28.2",
     "resolve": "1.6.0",
