--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "widget-table-2",
+  "name": "react-window-table",
   "version": "0.1.0",
-  "private": true,
+  "description": "react table supporting fixed columns",
+  "main": "src/components/WindowTable/index.js",
+  "author": {
+    "name": "Sung Won Cha",
+    "email": "mygenie3@naver.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bluewings/react-window-table"
+  },
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
