--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "memoize-one": "^4.0.0",
     "node-sass": "^4.9.3",
     "object-assign": "4.1.1",
+    "object.entries": "^1.0.4",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
