--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "object.entries": "^1.0.4",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
-    "prettier": "^1.14.2",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "pug-as-jsx-loader": "^1.0.57",
@@ -69,15 +68,14 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "with-hocs": "^1.0.0"
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {},
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "prettier": "prettier --write 'src/**/*.{js,json,css}'"
+    "prettier": "prettier --write 'src/**/*.{js,jsx,json,css}'"
   },
   "jest": {
     "collectCoverageFrom": [
