--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "with-hocs": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
