--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "p1": "prettier --write 'src/**/*.{js,jsx,json,css}'",
     "prettier": "prettier-eslint --write 'src/**/*.{js,jsx,json,css}'"
   },
   "jest": {
