--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "with-hocs": "^1.0.0"
   },
   "devDependencies": {
+    "babel-plugin-react-docgen": "^2.0.0",
     "prettier-eslint-cli": "^4.7.1"
   },
   "scripts": {
@@ -120,6 +121,7 @@
     "presets": [
       "es2015",
       "react-app"
-    ]
+    ],
+    "plugins": ["babel-plugin-react-docgen"]
   }
 }
