--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendors.js": "/static/js/vendors.37fe2b19.js",
-  "app.js": "/static/js/app.59d7026a.js",
-  "src-components-hungry-jacks-window-table-component.js": "/static/js/src-components-hungry-jacks-window-table-component.ecfb196e.js",
-  "runtime~app.js": "/static/js/runtime~app.b0f1415fece1a85d4e20.js",
-  "index.html": "/index.html"
+  "vendors.js": "/react-window-table/static/js/vendors.5398c5fe.js",
+  "app.js": "/react-window-table/static/js/app.a566d77c.js",
+  "src-components-hungry-jacks-window-table-component.js": "/react-window-table/static/js/src-components-hungry-jacks-window-table-component.ecfb196e.js",
+  "runtime~app.js": "/react-window-table/static/js/runtime~app.183e001d4a6e921e3f3a.js",
+  "index.html": "/react-window-table/index.html"
 }
