--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "faker": "^4.1.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -122,6 +123,8 @@
       "es2015",
       "react-app"
     ],
-    "plugins": ["babel-plugin-react-docgen"]
+    "plugins": [
+      "babel-plugin-react-docgen"
+    ]
   }
 }
